changed .gitignore and deleted temp files

--- a/yolov5-fire-detection/yolov5/.gitignore
+++ b/yolov5-fire-detection/yolov5/.gitignore
@@ -256,3 +256,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# mission temp files
+mission1_temp.groovy
+mission2_temp.groovy
+mission3_temp.groovy
